# roblox-cli

./: Cargo.toml  README.md  rustfmt.toml
src/: conclusion.rs  config.rs  main.rs  object.rs
src/action/: login.rs  mod.rs  status.rs
src/action/download/: mod.rs
src/action/info/: mod.rs
src/action/join/: game.rs  mod.rs
src/action/list/: badges.rs  experiences.rs  gamepasses.rs  mod.rs  name_history.rs
src/command/: add.rs  download.rs  info.rs  join.rs  list.rs  login.rs  mod.rs
src/objects/: badge.rs  mod.rs
